--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,7 +1,21 @@
-.Draggable {
-    
+.Card {
+    border: 1px solid black;
+    width: 100px;
+    height: 100px;
+    cursor: move;
+    cursor: grab;
+    cursor: -moz-grab;
+    cursor: -webkit-grab;
 }
 
-.text {
-    cursor: pointer;
+.Card:active {
+    cursor: grabbing;
+    cursor: -moz-grabbing;
+    cursor: -webkit-grabbing;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
