--- a/src/css/Row.css
+++ b/src/css/Row.css
@@ -1,9 +1,10 @@
 .Row {
     display: flex;
-    justify-content: center;
-    overflow: auto;
-    height: 500px;
-    width: 150px;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: auto;
+    height: 700px;
+    width: 250px;
     margin: 10px;
     border: 1px solid black;
 }
