Cards can move correctly between sidebar and Board

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 /* MainPage */
+.PageBody {
+    display: flex;
+    flex-direction: row;
+}
+
 .Board {
     display: flex;
     flex-direction: row;
