--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@
     flex-direction: row;
 }
 
+.Sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
+    border: 1px solid black;
+}
+
 .Board {
     display: flex;
     flex-direction: row;
