--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,12 @@
 }
 
 .Board {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    height: 750px;
+    display: grid;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    grid-template-columns: auto auto auto auto;
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;
     border: 1px solid black;
 }
 
