--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    height: 700px;
+    height: 500px;
     width: 250px;
     margin: 10px;
     border: 1px solid black;
@@ -56,6 +56,18 @@
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+}
+
+.YearPicker {
+    z-index: 2;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    height: 200px;
+    margin-left: -250px;
+    margin-top: -100px;
+    border: 1px solid black;
 }
 
 /* Creds */
