--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,17 @@
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 /* MainPage */
 .PageBody {
     display: flex;
     flex-direction: row;
-}
-
-.Sidebar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 5px;
-    border: 1px solid black;
 }
 
 .BoardWrapper {
@@ -76,7 +78,54 @@
     align-items: center;
 }
 
+.Sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
+    border: 1px solid black;
+}
+
 /* Creds */
+.LoginPage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: #7550ab;
+}
+
+.LoginWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+    height: 400px;
+    border-radius: 15px;
+    background-color: white;
+}
+
+.LoginForm {
+    border: 1px solid black;
+}
+
+.Email {
+    border: 1px solid black;
+}
+
+.Password {
+    border: 1px solid black;
+}
+
+.SubmitButton {
+    color: white;
+    background-color: #7550ab;
+}
+
 .ErrorText {
     color: red;
 }
