--- a/src/index.css
+++ b/src/index.css
@@ -118,8 +118,8 @@ body {
     justify-content: center;
     width: 450px;
     height: 400px;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 15px;
     background-color: white;
 }
@@ -153,6 +153,14 @@ body {
     border-radius: 5px;
     color: white;
     background-color: #7550ab;
+    cursor: pointer;
+    cursor: -moz-pointer;
+    cursor: -webkit-pointer;
+}
+
+.NavText {
+    color: white;
+    text-decoration: underline;
     cursor: pointer;
     cursor: -moz-pointer;
     cursor: -webkit-pointer;
