--- a/src/index.css
+++ b/src/index.css
@@ -93,82 +93,64 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-color: #7550ab;
+    background-color: #7550AB;
 }
 
-.LoginWrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    border-radius: 15px;
-    background-color: white;
-}
-
-.CreateWrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
+.AuthWrapper {
+    margin-top: -25px;
     margin-bottom: 20px;
     border-radius: 15px;
     background-color: white;
 }
 
 .AuthHeaderText {
-    color: #7550ab;
+    color: #7550AB;
     font-size: 22pt;
     margin-top: 30px;
     margin-bottom: 28px;
+    text-align: center;
     font-family: "Montserrat";
 }
 
 .LoginForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
     width: 350px;
-    height: 175px;
+    height: 100%;
     margin-top: 6px;
     margin-bottom: 20px;
     margin-right: 32px;
     margin-left: 32px;
+    text-align: center;
 }
 
 .CreateForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
     width: 350px;
-    height: 225px;
+    height: 100%;
     margin-top: 6px;
     margin-bottom: 20px;
     margin-right: 32px;
     margin-left: 32px;
+    text-align: center;
 }
 
 .AuthTextField {
-    width: 100%;
-    padding: 10px;
-    font-size: 18px;
+    width: 90%;
+    padding: 12px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 8px;
+    font-size: 16px;
     border-radius: 5px;
     font-family: "Montserrat";
 }
 
 .SubmitButton {
     width: 100%;
-    padding: 8px;
-    font-size: 18px;
-    border-radius: 5px;
+    padding: 12px;
+    margin-top: 8px;
+    border-radius: 8px;
+    font-size: 16px;
     color: white;
-    background-color: #7550ab;
+    background-color: #7550AB;
     cursor: pointer;
     cursor: -moz-pointer;
     cursor: -webkit-pointer;
@@ -186,4 +168,5 @@ body {
 
 .ErrorText {
     color: red;
+    font-family: "Montserrat";
 }
