--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,21 @@ input:-webkit-autofill:active  {
 }
 
 /* MainPage */
+.MainPage {
+    width: 100vw;
+    height: 100vh;
+}
+
+.PageHeader {
+    width: 100%;
+    height: 10%;
+}
+
 .PageBody {
     display: flex;
     flex-direction: row;
-}
-
-.BoardWrapper {
-    border: 1px solid black;
+    width: 100%;
+    height: 90%;
 }
 
 .Board {
@@ -33,7 +41,16 @@ input:-webkit-autofill:active  {
     grid-template-columns: auto auto auto auto;
     grid-row-gap: 10px;
     grid-column-gap: 10px;
+    width: 80%;
     border: 1px solid black;
+}
+
+.ColumnWrapper {
+    border: 1px solid black;
+}
+
+.ColumnTitle {
+    margin-left: 10px;
 }
 
 .Column {
@@ -73,8 +90,6 @@ input:-webkit-autofill:active  {
     position: fixed;
     top: 50%;
     left: 50%;
-    width: 500px;
-    height: 200px;
     margin-left: -250px;
     margin-top: -100px;
     border: 1px solid black;
@@ -92,6 +107,11 @@ input:-webkit-autofill:active  {
     align-items: center;
     padding: 5px;
     border: 1px solid black;
+    width: 20%;
+}
+
+.SearchBody {
+    height: 100%;
 }
 
 /* Creds */
