--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ input:-webkit-autofill:active  {
     background: transparent;
 }
 
+* {
+    -webkit-appearance: none;
+}
+
 /* MainPage */
 .MainPage {
     width: 100vw;
@@ -118,8 +122,10 @@ input:-webkit-autofill:active  {
 .SearchBar {
     width: 100%;
     font-size: 22px;
+    margin: 0px;
     padding: 12px;
     border: none;
+    outline: none;
     border-bottom: 1px solid black;
     background-color: white;
     font-family: "Montserrat";
