--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
     border: 1px solid black;
 }
 
@@ -52,7 +53,7 @@ input:-webkit-autofill:active  {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 80px);
 }
 
 .Board {
@@ -80,7 +81,6 @@ input:-webkit-autofill:active  {
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
-    overflow-y: auto;
     height: 500px;
     border: 1px solid black;
 }
@@ -114,9 +114,9 @@ input:-webkit-autofill:active  {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
     width: 20%;
     min-width: 250px;
-    height: 100%;
     border-left: 1px solid black;
 }
 
@@ -134,7 +134,7 @@ input:-webkit-autofill:active  {
 
 .SearchBody {
     height: 100%;
-    overflow: auto;
+    width: 100%;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
