--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,6 @@ input:-webkit-autofill:active  {
 }
 
 .AuthWrapper {
-    height: 250px;
     width: 400px;
     padding: 10px;
     margin-left: auto;
@@ -80,7 +79,7 @@ input:-webkit-autofill:active  {
 .AuthTextField {
     width: 90%;
     padding: 12px;
-    margin-bottom: 16px;
+    margin-bottom: 12px;
     font-size: 16px;
     border-radius: 5px;
     background-color: white;
@@ -91,6 +90,8 @@ input:-webkit-autofill:active  {
     padding: 12px;
     border-radius: 8px;
     font-size: 16px;
+    margin-top: 8px;
+    margin-bottom: 12px;
     color: white;
     background-color: var(--main-bg-color);
     cursor: pointer;
@@ -109,7 +110,6 @@ input:-webkit-autofill:active  {
 
 .ErrorText {
     color: red;
-    margin: 3px;
 }
 
 /* MainPage */
