--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,23 @@ input:-webkit-autofill:active  {
     height: calc(100% - var(--header-height));
 }
 
+.Toolbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-between;
+    width: 100%;
+    height: 30px;
+    border-bottom: 1px solid black;
+}
+
+.EditRowsButton {
+    border-radius: 5px;
+    margin-left: 5px;
+    width: 200px;
+    border-bottom: 1px solid black;
+}
+
 .Board {
     display: grid;
     justify-content: stretch;
@@ -148,7 +165,7 @@ input:-webkit-autofill:active  {
     grid-row-gap: 10px;
     grid-column-gap: 0px;
     padding: 10px;
-    width: 80%;
+    width: calc(100% - 20px);
     height: 100%;
     overflow: auto;
     -ms-overflow-style: none;
