--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,9 @@ input:-webkit-autofill:active  {
 }
 
 :root {
-    --main-bg-color: #7550AB;
+    --dropdown-list-width: 100px;
     --header-height: 80px;
+    --main-bg-color: #7550AB;
     --year-picker-height: 150px;
     --year-picker-width: 400px;
 }
@@ -146,6 +147,27 @@ input:-webkit-autofill:active  {
     margin-bottom: 0px;
     margin-top: 12px;
     margin-right: 32px;
+}
+
+.DropdownList {
+    position: absolute;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    top: calc(var(--header-height) - 12px);
+    right: 8px;
+    width: var(--dropdown-list-width);
+    background-color: white;
+}
+
+.DropdownListItem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 32px;
+    width: 100%;
+    border: 1px solid black;
 }
 
 .PageBody {
